# dbview

./: .gitignore  CMakeLists.txt  README.md
docs/: AGENT.md  DESIGN_QUESTIONNAIRE.md  ROADMAP.md  SPEC.md
scripts/: fetch_duckdb.sh  fetch_webview.sh
src/api/: api.c  api.h
src/app/: file_dialog.h  file_dialog.m  main.c
src/convert/: convert.c  convert.h
src/engine/: engine.c  engine.h  engine_duckdb.c  engine_internal.h  engine_sqlite.c  engine_test.h
src/support/: db_error.c  db_error.h  db_test.h
src/test/: db_test.c  test_main.c
tests/: convert_roundtrip.c  duckdb_file_flow.c  sqlite_file_flow.c  support_smoke.c
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  ConvertPanel.tsx  SqlEditor.tsx  bridge.ts  styles.css
